# CorpusWright

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: config.ts  corpus.ts  custom-removals.ts  dom.ts  export.ts  file-list.ts  main.ts  preview.ts  search.ts  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/corpusaid-core/: Cargo.toml  README.md
crates/corpuswright-core/: Cargo.toml
docs/: ingestion.md  page-zone-removal-rules.md  pdf-extraction-strategy.md  release-cleanup-alpha-3.md  repeated-artifact-finder.md  structured-custom-removals.md  supported-formats.md  testing.md
docs/archive/: legacy-pyside-ingestion.md  pdf-ocr-roadmap.md  product_workflow-spike.md  technical_debt.md
docs/releases/: v0.1.0-alpha.4.md  v0.1.0-alpha.5.md
legacy/pyside/: pyproject.toml
legacy/pyside/config/: requirements.txt
legacy/pyside/rust_preview/: Cargo.toml  README.md  pyproject.toml
legacy/pyside/rust_preview/src/: lib.rs
legacy/pyside/src/: CorpusAid.py
legacy/pyside/src/corpusaid/: __init__.py  cli.py
legacy/pyside/src/corpusaid/exporting/: __init__.py  service.py
legacy/pyside/src/corpusaid/ingestion/: __init__.py  backends.py  extractors.py  models.py  rust_backend.py  tika_backend.py
legacy/pyside/tests/: README.md  test_cli.py  test_exporting.py  test_gui_ingestion_integration.py  test_ingestion.py  test_native_ingestion.py
scripts/: check-release-consistency.cjs
(+86 files in other folders)
